--- a/Pages/nos.html
+++ b/Pages/nos.html
@@ -15,50 +15,53 @@
 </head>
 
 <body>
-    <header>
+    <div class="body">
         <header>
-            <nav class="navbar navbar-expand-sm bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html">Elaisa</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="pro.html">Productos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="sed.html">Sedes</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="nos.html">Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contacto</a>
-                            </li>
-                        </ul>
+            <header>
+                <nav class="navbar navbar-expand-sm ">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png" alt="Logo de la Marca Elaisa"></a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        </button>
+                        <div class="collapse navbar-collapse d-md-flex justify-content-md-center" id="navbarSupportedContent">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="pro.html">Productos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="sed.html">Sedes</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="nos.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
+                </nav>
+            </header>
+            <main>
+                <h1>¿Quienes somos?</h1>
+                <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil earum
+                    voluptas sint. Error quibusdam, sequi deserunt aliquam laborum ducimus ea esse explicabo dolorem
+                    molestias
+                    praesentium soluta?</p>
+            </main>
+            <footer class="footer">
+                <p class="footer__subt">Seguinos en nuestras redes</p>
+                <div>
+                    <img src="../img/logo-face.png" alt="logo de facebook">
+                    <img src="../img/logo-insta.png" alt="logo de instagram">
                 </div>
-            </nav>
-        </header>
-        <main>
-            <h1>¿Quienes somos?</h1>
-            <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil earum
-                voluptas sint. Error quibusdam, sequi deserunt aliquam laborum ducimus ea esse explicabo dolorem
-                molestias
-                praesentium soluta?</p>
-        </main>
-        <footer class="footer">
-            <p class="footer__subt">Seguinos en nuestras redes</p>
-            <div>
-                <img src="../img/logo-face.png" alt="logo de facebook">
-                <img src="../img/logo-insta.png" alt="logo de instagram">
-            </div>
-            <p>Todos los derechos reservados</p>
-        </footer>
+                <p>Todos los derechos reservados</p>
+            </footer>
+    </div>
+    
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
             crossorigin="anonymous"></script>
