--- a/Pages/pro.html
+++ b/Pages/pro.html
@@ -14,15 +14,15 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm bg-light">
+    <div class="body"><header>
+        <nav class="navbar navbar-expand-sm ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Elaisa</a>
+                <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png" alt="Logo de la Marca Elaisa"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse d-md-flex justify-content-md-center" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="pro.html">Productos</a>
@@ -82,6 +82,7 @@
         </div>
         <p>Todos los derechos reservados</p>
     </footer>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
