--- a/Pages/sed.html
+++ b/Pages/sed.html
@@ -14,108 +14,112 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Elaisa</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="pro.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="sed.html">Sedes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="nos.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contacto</a>
-                        </li>
-                    </ul>
+    <div class="body">
+        <header>
+            <nav class="navbar navbar-expand-sm ">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
+                            alt="Logo de la Marca Elaisa" style="width:100%; height: 4rem; margin-left: 10px;"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    </button>
+                    <div class="collapse navbar-collapse d-md-flex justify-content-md-center" id="navbarSupportedContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="pro.html">Productos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="sed.html">Sedes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="nos.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-    <main>
-        <!-- media querie vista desktop -->
-        <h1>Nuestras sedes</h1>
-        <section class="contenedorsed">
+        <main>
+            <!-- media querie vista desktop -->
+            <h1>Nuestras sedes</h1>
+            <section class="contenedorsed">
 
-            <div class="contenedorsed__hijo1">
-                <img src="../img/maxresdefault.jpg" alt="sede de Cipolletti">
-            </div>
-            <div class="contenedorsed__hijo2">
-                <h2>Sede de Cipolletti</h2>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum, quaerat totam
-                    quia
-                    quisquam ipsum cumque..
-                </p>
-            </div>
-            <div class="contenedorsed__hijo3">
-                <img src="../img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen">
-            </div>
-            <div class="contenedorsed__hijo4">
-                <h2>Sede de Allen</h2>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum, quaerat totam
-                    quia
-                    quisquam ipsum cumque..
-                </p>
-            </div>
-            <div class="contenedorsed__hijo5">
-                <img src="../img/Esprit sede interior 728.jpg" alt="sede de Roca">
-            </div>
-            <div class="contenedorsed__hijo6">
-                <h2>Sede de Roca</h2>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum, quaerat totam
-                    quia
-                    quisquam ipsum cumque..
-                </p>
-            </div>
-        </section>
-        <!-- vista mobile -->
-        <section id="carouselExampleCaptions" class="carousel slide carrusel" data-bs-ride="false">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../img/Esprit sede interior 728.jpg" class="d-block w-100" alt="sede de roca">
-                    <h2>Sede de Roca</h2>
+                <div class="contenedorsed__hijo1">
+                    <img src="../img/maxresdefault.jpg" alt="sede de Cipolletti">
                 </div>
-                <div class="carousel-item">
-                    <img src="../img/Gap-tiendas-825x464 (1).jpg" class="d-block w-100" alt="sede de Allen">
-                    <h2>Sede de Allen</h2>
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/maxresdefault.jpg" class="d-block w-100" alt="sede de Cipolletti">
+                <div class="contenedorsed__hijo2">
                     <h2>Sede de Cipolletti</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum, quaerat totam
+                        quia
+                        quisquam ipsum cumque..
+                    </p>
                 </div>
+                <div class="contenedorsed__hijo3">
+                    <img src="../img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen">
+                </div>
+                <div class="contenedorsed__hijo4">
+                    <h2>Sede de Allen</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum, quaerat totam
+                        quia
+                        quisquam ipsum cumque..
+                    </p>
+                </div>
+                <div class="contenedorsed__hijo5">
+                    <img src="../img/Esprit sede interior 728.jpg" alt="sede de Roca">
+                </div>
+                <div class="contenedorsed__hijo6">
+                    <h2>Sede de Roca</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum, quaerat totam
+                        quia
+                        quisquam ipsum cumque..
+                    </p>
+                </div>
+            </section>
+            <!-- vista mobile -->
+            <section id="carouselExampleCaptions" class="carousel slide carrusel" data-bs-ride="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../img/Esprit sede interior 728.jpg" class="d-block w-100" alt="sede de roca">
+                        <h2>Sede de Roca</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/Gap-tiendas-825x464 (1).jpg" class="d-block w-100" alt="sede de Allen">
+                        <h2>Sede de Allen</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/maxresdefault.jpg" class="d-block w-100" alt="sede de Cipolletti">
+                        <h2>Sede de Cipolletti</h2>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                </button>
+            </section>
+            <p class="d-sm-flex d-md-none text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Distinctio, aliquid accusantium </p>
+        </main>
+        <footer class="footer">
+            <p class="footer__subt">Seguinos en nuestras redes</p>
+            <div>
+                <img src="../img/logo-face.png" alt="logo de facebook">
+                <img src="../img/logo-insta.png" alt="logo de instagram">
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </button>
-        </section>
-        <p class="d-sm-flex d-md-none text-align-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, aliquid accusantium </p>
-    </main>
-    <footer class="footer">
-        <p class="footer__subt">Seguinos en nuestras redes</p>
-        <div>
-            <img src="../img/logo-face.png" alt="logo de facebook">
-            <img src="../img/logo-insta.png" alt="logo de instagram">
-        </div>
-        <p>Todos los derechos reservados</p>
-    </footer>
+            <p>Todos los derechos reservados</p>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
