--- a/index.html
+++ b/index.html
@@ -13,54 +13,56 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Elaisa</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="Pages/pro.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Pages/sed.html">Sedes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Pages/nos.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Pages/contact.html">Contacto</a>
-                        </li>
-                    </ul>
+    <div class="body">
+        <header>
+            <nav class="navbar navbar-expand-sm ">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="index.html"><img src="img/ELaisa-removebg-preview (2).png" alt="Logo de la Marca Elaisa"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    </button>
+                    <div class="collapse navbar-collapse d-md-flex justify-content-md-center" id="navbarSupportedContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/pro.html">Productos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/sed.html">Sedes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/nos.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/contact.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </nav>
+        </header>
+        <main>
+            <h1>Elaisa </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates facere voluptatum soluta iure saepe
+                dolor, nihil temporibus doloremque minima debitis quasi nobis ipsa, voluptatibus iste totam amet eaque
+                dolores eius.</p>
+            <div>
+                <h2>Una Prenda distinta</h2>
             </div>
-        </nav>
-    </header>
-    <main>
-        <h1>Elaisa </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates facere voluptatum soluta iure saepe
-            dolor, nihil temporibus doloremque minima debitis quasi nobis ipsa, voluptatibus iste totam amet eaque
-            dolores eius.</p>
-        <div>
-            <h2>Una Prenda distinta</h2>
-        </div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/bvQcvnCLt0I" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-    </main>
-    <footer class="footer">
-        <p class="footer__subt">Seguinos en nuestras redes</p>
-        <div>
-            <img src="img/logo-face.png" alt="logo de facebook">
-            <img src="img/logo-insta.png" alt="logo de instagram">
-        </div>
-        <p>Todos los derechos reservados</p>
-    </footer>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bvQcvnCLt0I"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </main>
+        <footer class="footer">
+            <p class="footer__subt">Seguinos en nuestras redes</p>
+            <div>
+                <img src="img/logo-face.png" alt="logo de facebook">
+                <img src="img/logo-insta.png" alt="logo de instagram">
+            </div>
+            <p>Todos los derechos reservados</p>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
