--- a/Pages/nos.html
+++ b/Pages/nos.html
@@ -20,12 +20,14 @@
             <header>
                 <nav class="navbar navbar-expand-sm ">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png" alt="Logo de la Marca Elaisa"></a>
+                        <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
+                                alt="Logo de la Marca Elaisa"></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         </button>
-                        <div class="collapse navbar-collapse d-md-flex justify-content-md-center" id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
+                            id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a class="nav-link" href="pro.html">Productos</a>
@@ -47,7 +49,8 @@
             <main>
                 <h1>¿Quienes somos?</h1>
                 <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil earum
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil
+                    earum
                     voluptas sint. Error quibusdam, sequi deserunt aliquam laborum ducimus ea esse explicabo dolorem
                     molestias
                     praesentium soluta?</p>
@@ -61,10 +64,10 @@
                 <p>Todos los derechos reservados</p>
             </footer>
     </div>
-    
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-            crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
