--- a/Pages/pro.html
+++ b/Pages/pro.html
@@ -14,75 +14,79 @@
 </head>
 
 <body>
-    <div class="body"><header>
-        <nav class="navbar navbar-expand-sm ">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png" alt="Logo de la Marca Elaisa"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                </button>
-                <div class="collapse navbar-collapse d-md-flex justify-content-md-center" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="pro.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="sed.html">Sedes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="nos.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contacto</a>
-                        </li>
-                    </ul>
+    <div class="body">
+        <header>
+            <nav class="navbar navbar-expand-sm ">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
+                            alt="Logo de la Marca Elaisa"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    </button>
+                    <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
+                        id="navbarSupportedContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="pro.html">Productos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="sed.html">Sedes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="nos.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </nav>
+        </header>
+        <main>
+            <h1>Nuestros productos</h1>
+            <section class="contenedorpro">
+                <div class="contenedorpro__hijo">
+                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
+                        alt="foto de remera simple">
+                    <h2>Remera simple</h2>
+                    <p>20$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo">
+                    <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
+                        alt="foto de remera con estampado pequeño">
+                    <h2>Remera con estampado pequeño</h2>
+                    <p>30$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo">
+                    <img src="../img/TX04.png" alt="foto de remera con estampado grande">
+                    <h2>Remera con estampado grande</h2>
+                    <p>15$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <p class="footer__subt">Seguinos en nuestras redes</p>
+            <div>
+                <img src="../img/logo-face.png" alt="logo de facebook">
+                <img src="../img/logo-insta.png" alt="logo de instagram">
             </div>
-        </nav>
-    </header>
-    <main>
-        <h1>Nuestros productos</h1>
-        <section class="contenedorpro">
-            <div class="contenedorpro__hijo">
-                <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
-                    alt="foto de remera simple">
-                <h2>Remera simple</h2>
-                <p>20$</p>
-                <h3>Talles</h3>
-                <span>S</span>
-                <span>M</span>
-                <span>L</span>
-            </div>
-            <div class="contenedorpro__hijo">
-                <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png" alt="foto de remera con estampado pequeño">
-                <h2>Remera con estampado pequeño</h2>
-                <p>30$</p>
-                <h3>Talles</h3>
-                <span>S</span>
-                <span>M</span>
-                <span>L</span>
-            </div>
-            <div class="contenedorpro__hijo">
-                <img src="../img/TX04.png" alt="foto de remera con estampado grande">
-                <h2>Remera con estampado grande</h2>
-                <p>15$</p>
-                <h3>Talles</h3>
-                <span>S</span>
-                <span>M</span>
-                <span>L</span>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
-        <p class="footer__subt">Seguinos en nuestras redes</p>
-        <div>
-            <img src="../img/logo-face.png" alt="logo de facebook">
-            <img src="../img/logo-insta.png" alt="logo de instagram">
-        </div>
-        <p>Todos los derechos reservados</p>
-    </footer>
-</div>
+            <p>Todos los derechos reservados</p>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
