--- a/Pages/sed.html
+++ b/Pages/sed.html
@@ -24,7 +24,8 @@
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     </button>
-                    <div class="collapse navbar-collapse d-md-flex justify-content-md-center" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
+                        id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link" href="pro.html">Productos</a>
