--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <header>
             <nav class="navbar navbar-expand-sm ">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html"><img src="img/ELaisa-removebg-preview (2).png" alt="Logo de la Marca Elaisa"></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/ELaisa-removebg-preview (2).png"
+                            alt="Logo de la Marca Elaisa"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     </button>
-                    <div class="collapse navbar-collapse d-md-flex justify-content-md-center" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
+                        id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link" href="pages/pro.html">Productos</a>
