--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <header>
             <nav class="navbar navbar-expand-sm ">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html"><img src="img/ELaisa-removebg-preview (2).png"
-                            alt="Logo de la Marca Elaisa"></a>
+                    <a class="navbar-brand ms-10" href="index.html"><img src="img/ELaisa-removebg-preview (2).png"
+                            alt="Logo de la Marca Elaisa" "></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
