--- a/Pages/nos.html
+++ b/Pages/nos.html
@@ -30,16 +30,16 @@
                             id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="pro.html">Productos</a>
+                                    <a class="nav-link" id="a" href="pro.html">Productos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="sed.html">Sedes</a>
+                                    <a class="nav-link" id="a" href="sed.html">Sedes</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="nos.html">Nosotros</a>
+                                    <a class="nav-link" id="a" href="nos.html">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contacto</a>
+                                    <a class="nav-link" id="a" href="contact.html">Contacto</a>
                                 </li>
                             </ul>
                         </div>
