--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                         id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/pro.html">Productos</a>
+                                <a class="nav-link" id="a" href="pages/pro.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/sed.html">Sedes</a>
+                                <a class="nav-link" id="a" href="pages/sed.html">Sedes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/nos.html">Nosotros</a>
+                                <a class="nav-link" id="a" href="pages/nos.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/contact.html">Contacto</a>
+                                <a class="nav-link" id="a" href="pages/contact.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
