agregado de mixin y include sass, cambios en index y nosotros

--- a/Pages/nos.html
+++ b/Pages/nos.html
@@ -46,7 +46,7 @@
                     </div>
                 </nav>
             </header>
-            <main>
+            <main class="contenedornos">
                 <h1>¿Quienes somos?</h1>
                 <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil
