--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Inicio</title>
+    <title>Pagina deInicio</title>
 </head>
 
 <body>
@@ -43,8 +43,8 @@
                 </div>
             </nav>
         </header>
-        <main>
-            <h1>Elaisa </h1>
+        <main class="contenedorindex">
+            <h1><img src="img/ELaisa-removebg-preview (2).png" alt="Imagen del logo de Elaisa"> </h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates facere voluptatum soluta iure saepe
                 dolor, nihil temporibus doloremque minima debitis quasi nobis ipsa, voluptatibus iste totam amet eaque
                 dolores eius.</p>
@@ -55,7 +55,7 @@
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </main>
+        </main> 
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
             <div>
