--- a/Pages/nos.html
+++ b/Pages/nos.html
@@ -47,15 +47,20 @@
                 </nav>
             </header>
             <main class="contenedornos">
-                <h1>¿Quienes somos?</h1>
-                <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil
+                <h1 class="contenedornos__h1">¿Quienes somos?</h1>
+                <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención"
+                    class="contenedornos__img">
+                <p class="contenedornos__p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil
                     earum
                     voluptas sint. Error quibusdam, sequi deserunt aliquam laborum ducimus ea esse explicabo dolorem
                     molestias
-                    praesentium soluta?</p>
+                    praesentium soluta?
+                </p>
+                <p class="contenedornos__p2 d-md-none d-sm-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil
+                    earum
+                    voluptas sint.</p>
             </main>
-            <footer class="footer">
+            <footer class=" footer">
                 <p class="footer__subt">Seguinos en nuestras redes</p>
                 <div>
                     <img src="../img/logo-face.png" alt="logo de facebook">
