cambios en nosotros

--- a/Pages/nos.html
+++ b/Pages/nos.html
@@ -49,14 +49,16 @@
             <main class="contenedornos">
                 <div class="contenedornos__div">
                     <h1 class="contenedornos__div__h1">¿Quienes somos?</h1>
-                    <p class="contenedornos__div__p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil
+                    <p class="contenedornos__div__p1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis odio consequatur quas nihil
                         earum
                         voluptas sint. Error quibusdam, sequi deserunt aliquam laborum ducimus ea esse explicabo dolorem
                         molestias
                         praesentium soluta?
                     </p>
                 </div>
-                <p class="contenedornos__p2 d-md-none d-sm-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odio consequatur quas nihil
+                <p class="contenedornos__p2 d-md-none d-sm-inline">Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Perferendis odio consequatur quas nihil
                     earum
                     voluptas sint.</p>
                 <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención"
@@ -65,8 +67,10 @@
             <footer class=" footer">
                 <p class="footer__subt">Seguinos en nuestras redes</p>
                 <div>
-                    <img src="../img/logo-face.png" alt="logo de facebook">
-                    <img src="../img/logo-insta.png" alt="logo de instagram">
+                    <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
+                            alt="logo de facebook"></a>
+                    <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
+                            alt="logo de instagram"></a>
                 </div>
                 <p>Todos los derechos reservados</p>
             </footer>
