--- a/Pages/sed.html
+++ b/Pages/sed.html
@@ -115,8 +115,10 @@
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
             <div>
-                <img src="../img/logo-face.png" alt="logo de facebook">
-                <img src="../img/logo-insta.png" alt="logo de instagram">
+                <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
+                        alt="logo de facebook"></a>
+                <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
+                        alt="logo de instagram"></a>
             </div>
             <p>Todos los derechos reservados</p>
         </footer>
