--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 voluptatum soluta iure saepe
                 dolor, nihil temporibus doloremque minima debitis quasi nobis ipsa, voluptatibus iste totam amet eaque
                 dolores eius.</p>
-            <p class="d-md-none d-sm-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ut cumque dolore fugiat similique </p>
+            <p class="d-md-none d-sm-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ut cumque
+                dolore fugiat similique </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/bvQcvnCLt0I"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -60,8 +61,10 @@
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
             <div>
-                <img src="img/logo-face.png" alt="logo de facebook">
-                <img src="img/logo-insta.png" alt="logo de instagram">
+                <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
+                        alt="logo de facebook"></a>
+                <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
+                        alt="logo de instagram"></a>
             </div>
             <p>Todos los derechos reservados</p>
         </footer>
