--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -15,7 +15,7 @@
 <body>
     <div class="body">
         <header>
-            <nav class="navbar navbar-expand-sm ">
+            <nav class="navbar navbar-expand-sm">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
                             alt="Logo de la Marca Elaisa"></a>
@@ -46,7 +46,7 @@
         <main>
             <form action="" class="contacto__formulario">
                 <fieldset class="contacto__formulario__caja">
-                    <legend class="contacto__formulario__titulo"> Inicia seción</legend>
+                    <legend class="contacto__formulario__titulo"> Inicia sesión</legend>
                     <section class="contacto__formulario__nombre">
                         <label for="nombre">Nombre de usuario</label>
                         <input type="text" name="" id="nombre" placeholder="Escribe el nombre de usuario">
@@ -65,13 +65,14 @@
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
             <div>
-                <img src="../img/logo-face.png" alt="logo de facebook">
-                <img src="../img/logo-insta.png" alt="logo de instagram">
+                <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
+                        alt="logo de facebook"></a>
+                <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
+                        alt="logo de instagram"></a>
             </div>
             <p>Todos los derechos reservados</p>
         </footer>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
