--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Elaisa, tienda de ropa, ropa, prendas, remeras, contacto, inicia sesion">
+    <meta name="description"
+        content="Crea tu perfil para que puedas acceder a las ofertas y recibir todas la novedades">
     <!--css y BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
