--- a/Pages/nos.html
+++ b/Pages/nos.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras, nosotros, info, creacion">
+    <meta name="description"
+        content="Elaisa es una marca de ropa creada en 1980 por Ricardo Rodriguez en su afan de crear y diseñar">
     <!--css y BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -49,18 +52,13 @@
             <main class="contenedornos">
                 <div class="contenedornos__div">
                     <h1 class="contenedornos__div__h1">¿Quienes somos?</h1>
-                    <p class="contenedornos__div__p1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Perferendis odio consequatur quas nihil
-                        earum
-                        voluptas sint. Error quibusdam, sequi deserunt aliquam laborum ducimus ea esse explicabo dolorem
-                        molestias
-                        praesentium soluta?
+                    <p class="contenedornos__div__p1">Elaisa es una marca de ropa creada en 1980 por Ricardo Rodriguez
+                        en su afan de crear y diseñar prendas de vestir con diseños fabulosos para la comunidad. Y poco
+                        a poco, se fue ganando renombre entre las marcas locales hasta llegar a un nivel mundial.
                     </p>
                 </div>
-                <p class="contenedornos__p2 d-md-none d-sm-inline">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Perferendis odio consequatur quas nihil
-                    earum
-                    voluptas sint.</p>
+                <p class="contenedornos__p2 d-md-none d-sm-inline">LElaisa es una marca de ropa creada en 1980 por
+                    Ricardo Rodriguez en su afan de crear y diseñar</p>
                 <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención"
                     class="contenedornos__img">
             </main>
