--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras">
+    <meta name="description"
+        content="Elaisa es una marca distanta las demas ya que te ofrece calidad y comfort am la vez a un precio accesible">
     <!--css y BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -47,12 +50,11 @@
             <div class="contenedorindex__logo"><img src="img/ELaisa-removebg-preview (2).png"
                     alt="Imagen del logo de Elaisa"></div>
             <h2 class="contenedorindex__h2">Una Prenda distinta</h2>
-            <p class="contenedorindex__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates facere
-                voluptatum soluta iure saepe
-                dolor, nihil temporibus doloremque minima debitis quasi nobis ipsa, voluptatibus iste totam amet eaque
-                dolores eius.</p>
-            <p class="d-md-none d-sm-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ut cumque
-                dolore fugiat similique </p>
+            <p class="contenedorindex__p">Elaisa es una marca distanta las demas ya que te ofrece calidad y comfort am
+                la vez a un precio accesible dandote continuos descuentos con todas las formas de pago que te imaginnes
+                con envios a todo el mundo</p>
+            <p class="d-md-none d-sm-inline">Elaisa es una marca distanta las demas ya que te ofrece calidad y comfort
+                am la vez a un precio accesible</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/bvQcvnCLt0I"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -61,9 +63,9 @@
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
             <div>
-                <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
+                <a href="https://es-la.facebook.com" Target="_blank"><img src="img/logo-face.png"
                         alt="logo de facebook"></a>
-                <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
+                <a href="https://www.instagram.com" Target="_blank"><img src="img/logo-insta.png"
                         alt="logo de instagram"></a>
             </div>
             <p>Todos los derechos reservados</p>
