cambio en index

--- a/Pages/sed.html
+++ b/Pages/sed.html
@@ -60,7 +60,7 @@
                     <h2>Sede de Cipolletti</h2>
                     <p>
                         Lugar donde se fundo Elaisa y se crearon la primeras prendas de ropa que lograron cautivar al
-                        mundo
+                        mundo.
                     </p>
                 </div>
                 <div class="contenedorsed__hijo3">
@@ -70,7 +70,7 @@
                     <h2>Sede de Allen</h2>
                     <p>
                         Segundo local que se creo con la intencion de aumentar la extension de la marca y tener mas
-                        empleados
+                        empleados.
                     </p>
                 </div>
                 <div class="contenedorsed__hijo5">
@@ -79,7 +79,7 @@
                 <div class="contenedorsed__hijo6">
                     <h2>Sede de Roca</h2>
                     <p>
-                        Nuestra mas nueva sucursal que abro este año que desde entonces ha sido un rotundo exito
+                        Nuestra mas nueva sucursal que abro este año que desde entonces ha sido un rotundo exito.
                     </p>
                 </div>
             </section>
