--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2 class="contenedorindex__h2">Una Prenda distinta</h2>
             <p class="contenedorindex__p">Elaisa es una marca distanta las demas ya que te ofrece calidad y comfort am
                 la vez a un precio accesible dandote continuos descuentos con todas las formas de pago que te imaginnes
-                con envios a todo el mundo</p>
+                con envios a todo el mundo.</p>
             <p class="d-md-none d-sm-inline">Elaisa es una marca distanta las demas ya que te ofrece calidad y comfort
                 am la vez a un precio accesible</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/bvQcvnCLt0I"
