cambio en index

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Elaisa, tienda de ropa, ropa, prendas, remeras, contacto, inicia sesion">
+    <meta name="keywords" content="Elaisa, tienda de ropa, ropa, prendas, remeras, contacto, inicia sesion, sesion">
     <meta name="description"
         content="Crea tu perfil para que puedas acceder a las ofertas y recibir todas la novedades">
     <!--css y BT-->
