cambios en nav(boton y altura)

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"><img src="img/ELaisa-removebg-preview (2).png"
                             alt="Logo de la Marca Elaisa" class="d-md-none d-sm-inline"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <button class="navbar-toggler boton" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     </button>
                     <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                         id="navbarSupportedContent">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav" id="ul">
                             <li class="nav-item">
                                 <a class="nav-link" id="a" href="pages/pro.html">Productos</a>
                             </li>
