cambios en nav(boton y altura)

--- a/pages/nos.html
+++ b/pages/nos.html
@@ -57,7 +57,7 @@
                         a poco, se fue ganando renombre entre las marcas locales hasta llegar a un nivel mundial.
                     </p>
                 </div>
-                <p class="contenedornos__p2 d-md-none d-sm-inline">LElaisa es una marca de ropa creada en 1980 por
+                <p class="contenedornos__p2 d-md-none d-sm-inline">Elaisa es una marca de ropa creada en 1980 por
                     Ricardo Rodriguez en su afan de crear y diseñar</p>
                 <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención"
                     class="contenedornos__img">
