cambios en nav(boton y altura)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras">
     <meta name="description"
-        content="Elaisa es una marca distanta las demas ya que te ofrece calidad y comfort am la vez a un precio accesible">
+        content="Elaisa es una marca distinta a las demas ya que te ofrece calidad y comfort a la vez a un precio accesible">
     <!--css y BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -50,11 +50,11 @@
             <div class="contenedorindex__logo"><img src="img/ELaisa-removebg-preview (2).png"
                     alt="Imagen del logo de Elaisa"></div>
             <h2 class="contenedorindex__h2">Una Prenda distinta</h2>
-            <p class="contenedorindex__p">Elaisa es una marca distanta las demas ya que te ofrece calidad y comfort am
-                la vez a un precio accesible dandote continuos descuentos con todas las formas de pago que te imaginnes
+            <p class="contenedorindex__p">Elaisa es una marca distinta las demas ya que te ofrece calidad y comfort a
+                la vez a un precio accesible, dandote continuos descuentos con todas las formas de pago que te imagines y
                 con envios a todo el mundo.</p>
-            <p class="d-md-none d-sm-inline">Elaisa es una marca distanta las demas ya que te ofrece calidad y comfort
-                am la vez a un precio accesible</p>
+            <p class="d-md-none d-sm-inline">Elaisa es una marca distinta las demas ya que te ofrece calidad y comfort
+                a la vez a un precio accesible</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/bvQcvnCLt0I"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
