--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,24 +46,20 @@
                 </div>
             </nav>
         </header>
-        <main>
-            <form action="" class="contacto__formulario">
-                <fieldset class="contacto__formulario__caja">
-                    <legend class="contacto__formulario__titulo"> Inicia sesión</legend>
-                    <section class="contacto__formulario__nombre">
-                        <label for="nombre">Nombre de usuario</label>
-                        <input type="text" name="" id="nombre" placeholder="Escribe el nombre de usuario">
-                    </section>
-                    <section class="contacto__formulario__mail">
-                        <label for="mail">Completa tu E-mail</label>
-                        <input type="email" name="" id="mail" placeholder="Escribe tu E-mail">
-                    </section>
-                    <section class="contacto__formulario__botones">
-                        <input class="reset" type="reset">
-                        <input class="submit" type="submit">
-                    </section>
-                </fieldset>
-            </form>
+        <main class="main">
+            <div class="main__caja">
+                <h1>INICIA SESION</h1>
+                <div>
+                    <label for="exampleFormControlInput1" class="form-label">Nombre de usuario</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div>
+                    <label for="exampleFormControlInput1" class="form-label">Direccion de E-mail</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <input class="reset" type="reset">
+                <input class="submit" type="submit">
+            </div>
         </main>
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
