--- a/pages/sed.html
+++ b/pages/sed.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras, nosotros, info, creacion">
     <meta name="description"
-        content="Elaisa es una marca que siepre busca estar cerca de vos con los mismos precios en todos lados">
+        content="Elaisa es una marca que siempre busca estar cerca de vos, con los mismos precios en todos lados">
     <!--css y BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -79,7 +79,7 @@
                 <div class="contenedorsed__hijo6">
                     <h2>Sede de Roca</h2>
                     <p>
-                        Nuestra mas nueva sucursal que abro este año que desde entonces ha sido un rotundo exito.
+                        Nuestra mas nueva sucursal que abrio este año que desde entonces ha sido un rotundo exito.
                     </p>
                 </div>
             </section>
@@ -108,7 +108,7 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 </button>
             </section>
-            <p class="d-sm-flex d-md-none text-center" id="p">Elaisa es una marca que siepre busca estar cerca de vos
+            <p class="d-sm-flex d-md-none text-center" id="p">Elaisa es una marca que siempre busca estar cerca de vos
                 con los mismos precios en todos lados</p>
         </main>
         <footer class="footer">
