cambios en el color de la letra, en sedes y en h1

--- a/pages/sed.html
+++ b/pages/sed.html
@@ -49,12 +49,13 @@
         </header>
 
         <main>
-            <!-- vista mobile -->
+            <h1>Nuestas sedes</h1>
             <section id="carouselExampleCaptions" class="carousel slide carrusel" data-bs-ride="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="../img/Esprit sede interior 728.jpg" class="d-block w-100" alt="sede de roca">
                         <h2>Sede de Roca</h2>
+                        <hr>
                         <p>
                             Nuestra mas nueva sucursal que abrio este año que desde entonces ha sido un rotundo exito.
                         </p>
@@ -62,6 +63,7 @@
                     <div class="carousel-item">
                         <img src="../img/Gap-tiendas-825x464 (1).jpg" class="d-block w-100" alt="sede de Allen">
                         <h2>Sede de Allen</h2>
+                        <hr>
                         <p>
                             Segundo local que se creo con la intencion de aumentar la extension de la marca y tener mas
                             empleados.
@@ -70,6 +72,7 @@
                     <div class="carousel-item">
                         <img src="../img/maxresdefault.jpg" class="d-block w-100" alt="sede de Cipolletti">
                         <h2>Sede de Cipolletti</h2>
+                        <hr>
                         <p>
                             Lugar donde se fundo Elaisa y se crearon la primeras prendas de ropa que lograron cautivar al
                             mundo.
