--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,7 +48,7 @@
         </header>
         <main class="main">
             <div class="main__caja">
-                <h1>INICIA SESION</h1>
+                <h1>Inicia sesión en Elaisa</h1>
                 <div>
                     <label for="exampleFormControlInput1" class="form-label">Nombre de usuario</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
