cambios en el color de la letra, en sedes y en h1

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" id="a" href="pages/pro.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/sed.html">Sedes</a>
+                                <a class="nav-link" id="a" href="pages/proy.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="a" href="pages/nos.html">Nosotros</a>
@@ -46,19 +46,53 @@
                 </div>
             </nav>
         </header>
-        <main class="contenedorindex">
-            <div class="contenedorindex__logo"><img src="img/ELaisa-removebg-preview (2).png"
-                    alt="Imagen del logo de Elaisa"></div>
-            <h2 class="contenedorindex__h2">Una Prenda distinta</h2>
-            <p class="contenedorindex__p">Elaisa es una marca distinta las demas ya que te ofrece calidad y comfort a
-                la vez a un precio accesible, dandote continuos descuentos con todas las formas de pago que te imagines y
-                con envios a todo el mundo.</p>
-            <p class="d-md-none d-sm-inline">Elaisa es una marca distinta las demas ya que te ofrece calidad y comfort
-                a la vez a un precio accesible</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/bvQcvnCLt0I"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen class="contenedorindex__video"></iframe>
+        <main>
+            <section class="contenedorindex">
+                <div class="contenedorindex__logo"><img src="img/ELaisa-removebg-preview (2).png"
+                        alt="Imagen del logo de Elaisa"></div>
+                <h2 class="contenedorindex__h2">Una Prenda distinta</h2>
+                <p class="contenedorindex__p">Elaisa es una marca distinta las demas ya que te ofrece calidad y comfort
+                    a
+                    la vez a un precio accesible, dandote continuos descuentos con todas las formas de pago que te
+                    imagines y
+                    con envios a todo el mundo.</p>
+                <p class="d-md-none d-sm-inline">Elaisa es una marca distinta las demas ya que te ofrece calidad y
+                    comfort
+                    a la vez a un precio accesible</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bvQcvnCLt0I"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen class="contenedorindex__video"></iframe>
+            </section>
+            <hr>
+            <section id="carouselExampleCaptions" class="carousel slide carrusel contenedorsed" data-bs-ride="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/Esprit sede interior 728.jpg" class="d-inline w-100" alt="sede de roca">
+                        <h3>Sede de Roca</h3>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Gap-tiendas-825x464 (1).jpg" class="d-inline w-100" alt="sede de Allen">
+                        <h3>Sede de Allen</h3>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/maxresdefault.jpg" class="d-inline w-100" alt="sede de Cipolletti">
+                        <h3>Sede de Cipolletti</h3>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </button>
+                </div>
+                <hr class="d-sm-flex d-md-none text-center">
+                <p class="d-sm-flex d-md-none text-center" id="p">Elaisa es una marca que siempre busca estar cerca
+                    de vos
+                    con los mismos precios en todos lados</p>
+            </section>
         </main>
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
