--- a/pages/pro.html
+++ b/pages/pro.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link" id="a" href="pro.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="sed.html">Sedes</a>
+                                <a class="nav-link" id="a" href="proy.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="a" href="nos.html">Nosotros</a>
