--- a/pages/proy.html
+++ b/pages/proy.html
@@ -34,7 +34,7 @@
                                 <a class="nav-link" id="a" href="pro.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="sed.html">Sedes</a>
+                                <a class="nav-link" id="a" href="proy.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="a" href="nos.html">Nosotros</a>
@@ -47,49 +47,8 @@
                 </div>
             </nav>
         </header>
-
         <main>
-            <h1>Nuestas sedes</h1>
-            <section id="carouselExampleCaptions" class="carousel slide carrusel" data-bs-ride="false">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/Esprit sede interior 728.jpg" class="d-block w-100" alt="sede de roca">
-                        <h2>Sede de Roca</h2>
-                        <hr>
-                        <p>
-                            Nuestra mas nueva sucursal que abrio este año que desde entonces ha sido un rotundo exito.
-                        </p>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/Gap-tiendas-825x464 (1).jpg" class="d-block w-100" alt="sede de Allen">
-                        <h2>Sede de Allen</h2>
-                        <hr>
-                        <p>
-                            Segundo local que se creo con la intencion de aumentar la extension de la marca y tener mas
-                            empleados.
-                        </p>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/maxresdefault.jpg" class="d-block w-100" alt="sede de Cipolletti">
-                        <h2>Sede de Cipolletti</h2>
-                        <hr>
-                        <p>
-                            Lugar donde se fundo Elaisa y se crearon la primeras prendas de ropa que lograron cautivar al
-                            mundo.
-                        </p>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                </button>
-            </section>
-            <p class="d-sm-flex d-md-none text-center" id="p">Elaisa es una marca que siempre busca estar cerca de vos
-                con los mismos precios en todos lados</p>
+            <h1>Nuestros proyectos</h1>
         </main>
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
