cambios en el index

--- a/pages/nos.html
+++ b/pages/nos.html
@@ -51,7 +51,7 @@
             </header>
             <main class="contenedornos">
                 <div class="contenedornos__div">
-                    <h1 class="contenedornos__div__h1">¿Quienes somos?</h1>
+                    <h1 class="contenedornos__div__h1" id="h1">¿Quienes somos?</h1>
                     <p class="contenedornos__div__p1">Elaisa es una marca de ropa creada en 1980 por Ricardo Rodriguez
                         en su afan de crear y diseñar prendas de vestir con diseños fabulosos para la comunidad. Y poco
                         a poco, se fue ganando renombre entre las marcas locales hasta llegar a un nivel mundial.
