--- a/pages/pro.html
+++ b/pages/pro.html
@@ -49,7 +49,7 @@
             </nav>
         </header>
         <main>
-            <h1>Nuestros productos</h1>
+            <h1 id="h1">Nuestros productos</h1>
             <section class="contenedorpro">
                 <div class="contenedorpro__hijo">
                     <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
