--- a/pages/proy.html
+++ b/pages/proy.html
@@ -48,7 +48,7 @@
             </nav>
         </header>
         <main>
-            <h1>Nuestros proyectos</h1>
+            <h1 id="h1">Nuestros proyectos</h1>
         </main>
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
