--- a/index.html
+++ b/index.html
@@ -46,52 +46,39 @@
                 </div>
             </nav>
         </header>
-        <main>
-            <section class="contenedorindex">
-                <div class="contenedorindex__logo"><img src="img/ELaisa-removebg-preview (2).png"
-                        alt="Imagen del logo de Elaisa"></div>
-                <h2 class="contenedorindex__h2">Una Prenda distinta</h2>
-                <p class="contenedorindex__p">Elaisa es una marca distinta las demas ya que te ofrece calidad y comfort
-                    a
-                    la vez a un precio accesible, dandote continuos descuentos con todas las formas de pago que te
-                    imagines y
-                    con envios a todo el mundo.</p>
-                <p class="d-md-none d-sm-inline">Elaisa es una marca distinta las demas ya que te ofrece calidad y
-                    comfort
-                    a la vez a un precio accesible</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/bvQcvnCLt0I"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen class="contenedorindex__video"></iframe>
+        <main class="mainindex">
+            <section class="mainindex__sec1">
+                <video src="video/[FREE DRONE FOOTAGE] Sea 002 _ 4K 24fps.mp4" autoplay loop muted
+                    class="mainindex__sec1__video" alt="video de un ocenao">
+                </video>
             </section>
-            <hr>
-            <section id="carouselExampleCaptions" class="carousel slide carrusel contenedorsed" data-bs-ride="false">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/Esprit sede interior 728.jpg" class="d-inline w-100" alt="sede de roca">
-                        <h3>Sede de Roca</h3>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/Gap-tiendas-825x464 (1).jpg" class="d-inline w-100" alt="sede de Allen">
-                        <h3>Sede de Allen</h3>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/maxresdefault.jpg" class="d-inline w-100" alt="sede de Cipolletti">
-                        <h3>Sede de Cipolletti</h3>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    </button>
+            <section class="mainindex__sec2">
+                <img src="img/ELaisa-removebg-preview (2).png" alt="Logo de la Marca Elaisa"
+                    class="mainindex__sec2__logo">
+            </section>
+            <section class="mainindex__sec3">
+                <div class="mainindex__sec3__div1">
+                    <img src="img/maxresdefault.jpg" alt="sede de Cipolletti">
+                    <h1 id="h1">Sede de Cipolletti</h1>
+                    <p>
+                        Lugar donde se fundo Elaisa y se crearon la primeras prendas de ropa que lograron cautivar al
+                        mundo.
+                    </p>
                 </div>
-                <hr class="d-sm-flex d-md-none text-center">
-                <p class="d-sm-flex d-md-none text-center" id="p">Elaisa es una marca que siempre busca estar cerca
-                    de vos
-                    con los mismos precios en todos lados</p>
+                <div class="mainindex__sec3__div2"><img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen">
+                    <h1 id="h1">Sede de Allen</h1>
+                    <p>
+                        Segundo local que se creo con la intencion de aumentar la extension de la marca y tener mas
+                        empleados.
+                    </p>
+                </div>
+                <div class="mainindex__sec3__div3"><img src="img/Esprit sede interior 728.jpg" alt="sede de roca">
+                    <h1 id="h1">Sede de Roca</h1>
+                    <p>
+                        Nuestra mas nueva sucursal que abro este año que desde entonces ha sido un rotundo exito.
+                    </p>
+                </div>
+
             </section>
         </main>
         <footer class="footer">
