proindex media(mitad)

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     class="mainindex__sec2__logo">
                 <p>CALIDAD Y CONFORT A LA DISPOSICION DEL CLIENTE</p>
             </section>
-            <section class="mainindex__sec3" data-aos="fade-up">
+            <section class="mainindex__sec3">
                 <h1>Ofertas de temporada</h1>
                 <div class="mainindex__sec3__contenedorpro">
                     <div class="mainindex__sec3__contenedorpro__hijo">
